@@ -9,6 +9,11 @@ CVS code -
 	- Move the call to raw() on systems that don't define
 	  _POSIX_VDISABLE outside the main input/output loop, as it
 	  doesn't need to be called every time through the loop. (DLR)
+- winio.c:
+  do_credits()
+	- Use nanosleep() instead of usleep().  The latter is only
+	  standard under BSD, whereas the former is POSIX compliant.
+	  (DLR)
 - README:
 	- Reformat to 72 characters per line, fix wording in one spot,
 	  and fix spacing in several spots. (DLR)
